<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="356dp"
        android:layout_height="626dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Titulo"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textIsSelectable="false"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="Button"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_Login"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:text="Button"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#000000"
                    app:srcCompat="@android:drawable/ic_dialog_email" />

                <EditText
                    android:id="@+id/email.txt"
                    android:layout_width="wrap_content"
                    android:layout_height="58dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/txt_correo"
                    android:inputType="textEmailAddress"
                    android:textSize="24sp" />

            </LinearLayout>

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="Button"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#000000"
                    app:srcCompat="@android:drawable/ic_lock_lock" />

                <EditText
                    android:id="@+id/password.txt"
                    android:layout_width="wrap_content"
                    android:layout_height="62dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/txt_contrasenia"
                    android:inputType="textPassword"
                    android:textSize="24sp" />
            </LinearLayout>

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:text="Button"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:onClick="Sesion"
                android:text="@string/boton1"


                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:text="Button"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:onClick="Registrar"
                android:text="@string/boton2"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:text="Button"
                android:visibility="invisible" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="74dp">

                <RadioButton
                    android:id="@+id/rb_normal"
                    android:layout_width="229dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:scrollHorizontally="false"
                    android:text="@string/rb_normal"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_registroRes"
                    android:layout_width="229dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/rb_CrearRes"
                    android:textSize="18sp" />
            </RadioGroup>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>